update src for image for subsribe viewlet

--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -120,22 +120,22 @@
               <dd class="subsribeWrapper">
                   <div class="subsribeItem document-action-twiter">
                       <a href="http://twitter.com/quintagroup" title="">
-                        <img alt="Twiter" src="http://devel.office.quintagroup.com:51004/SunRain/twiter.png" />
+                        <img alt="Twiter" src="images/twiter.png" />
                       </a>
                   </div>
                   <div class="subsribeItem document-action-facebook">
                       <a href="http://www.facebook.com/QuintagroupPloneThemes" title="">
-                        <img alt="Facebook" src="http://devel.office.quintagroup.com:51004/SunRain/facebook.png" />
+                        <img alt="Facebook" src="images/facebook.png" />
                       </a>
                   </div>
                   <div class="subsribeItem document-action-rss">
                       <a href="http://feeds2.feedburner.com/quintagroup" title="">
-                        <img alt="RSS" src="http://devel.office.quintagroup.com:51004/SunRain/rss.png" />
+                        <img alt="RSS" src="images/rss.png" />
                       </a>
                   </div>
                   <div class="subsribeItem document-action-sendto">
-                      <a href="http://devel.office.quintagroup.com:51004/SunRain/front-page/sendto_form" title="">
-                        <img alt="Send this" src="http://devel.office.quintagroup.com:51004/SunRain/email.png" />
+                      <a href="#" title="">
+                        <img alt="Send this" src="images/email.png" />
                       </a>
                   </div>
               </dd>
