fixed styles for print, blog and drop down

--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Quintagroup Theme - home page</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="css/sun.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/rain.css" />
+    <link rel="stylesheet" type="text/css" href="css/sun.css" />
+    <link rel="stylesheet" type="text/css" href="css/rain.css" />
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 
      <!--[if lte IE 7]>
