--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -10,6 +10,7 @@
      <!--[if lte IE 7]>
        <link rel="stylesheet" href="css/IEFixes.css" media="all" type="text/css" />
       <![endif]-->
+    <style type="text/css" media="screen"> </style>
   </head>
   <body>
     <div id="visual-portal-wrapper">
