update style to search, changed customization slogan

--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -407,23 +407,12 @@ Before you start exploring your newly created Plone site, please do the followin
 
   <div class="row">
     <div id="portal-footer">
-          <p>
-            <a href="http://skins.quintagroup.com/sunrain">SunRain Plone Theme</a>
-            &copy; 2005-<span>2011</span>
-            <a href="http://quintagroup.com">Quintagroup</a>.
-          </p>
-        </div>
+    </div>
     <div id="portal-colophon">
-        <div class="colophonWrapper">
-        <ul>
-          <li>
-            <a title="This site was built using the Plone Open Source CMS/WCM." href="http://plone.org">
-              Powered by Plone &amp; Python</a>
-          </li>
-        </ul>
-        </div>
+        <p><a href="http://skins.quintagroup.com/sunrain">SunRain Plone Theme</a> by <a href="http://quintagroup.com">Quintagroup</a> © 2005-2011</p>
       </div>
-    <div id="plone-statistics"> Statistics  </div>
+    <div id="plone-statistics">
+    </div>
   </div>
    </div>
 </body>
