--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -122,7 +122,7 @@
               <dd class="subsribeWrapper">
                   <div class="subsribeItem document-action-twiter">
                       <a href="http://twitter.com/quintagroup" title="">
-                        <img alt="Twiter" src="images/twiter.png" />
+                        <img alt="Twiter" src="images/twitter.png" />
                       </a>
                   </div>
                   <div class="subsribeItem document-action-facebook">
