deleted actions.xml, changed the order of inserting ploneCustom.css, update style

--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -405,7 +405,7 @@ Before you start exploring your newly created Plone site, please do the followin
                 </div>
      </div>
 
-  <div class="row">
+  <div class="row footer">
     <div id="portal-footer">
     </div>
     <div id="portal-colophon">
