added style to Responsive Web Design and added sunrain class to body

--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Quintagroup Theme - home page</title>
     <link rel="stylesheet" type="text/css" href="css/sun.css" />
     <link rel="stylesheet" type="text/css" href="css/rain.css" />
@@ -12,7 +13,7 @@
       <![endif]-->
     <style type="text/css" media="screen"> </style>
   </head>
-  <body>
+  <body class = "sunrain" >
     <div id="visual-portal-wrapper">
 
      <div id="portal-top" class="row">
