--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -406,10 +406,16 @@ Before you start exploring your newly created Plone site, please do the followin
                 </div>
      </div>
 
-    <div id="portal-footer">
-      <p><a href="http://skins.quintagroup.com/sunrain">SunRain Plone Theme</a> by <a href="http://quintagroup.com">Quintagroup</a> © 2005-2012</p>
-  </div>
+      <div class="row" id="portal-footer-wrapper">
+        <div class="cell width-full position-0">
+            <div id="portal-footer-line">
+                <div class="panels"></div>
+                <div id="portal-footer"></div>
+                <div id="portal-colophon"></div>
+                <div class="manage-panels-link"></div>
+            </div>
+        </div>
+    </div>
    </div>
 </body>
 </html>
-
