Replaced top images

--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -11,13 +11,12 @@
     <link rel="apple-touch-icon-precomposed" href="barceloneta-apple-touch-icon-precomposed.png" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/mainstyles.css">
-    <link rel="stylesheet" type="text/css" href="css/plone5-styles.css">
+    <link rel="stylesheet" type="text/css" href="css/plone5-stles.css">    
     <link rel="stylesheet" type="text/css" href="css/social.css">
     <link rel="stylesheet" type="text/css" href="css/sun.css" />
     <link rel="stylesheet" type="text/css" href="css/rain.css" />
     <style type="text/css" media="screen"> </style>
   </head>
-
   <body>
     <section id="portal-toolbar">
     </section>
