Styled multilingual for theme

--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -28,11 +28,11 @@
                   <a id="portal-logo" title="sunrain" accesskey="1" href="http://devel.office.quintagroup.com:21555/sunrain">
                   </a>
                   <span id="portal-slogan">Type your slogan here</span>
-                  <ul id="portal-languageselector"></ul>
                   <div id="portal-searchbox">
                   </div>
-                  <div id="portal-anontools">
-                  </div>
+                  <ul id="portal-languageselector"></ul>
+<!--                   <div id="portal-anontools">
+                  </div> -->
               </div>
             </header>
             </div>
