Fixed scripts and favicons

--- a/quintagroup/theme/sunrain/static/index.html
+++ b/quintagroup/theme/sunrain/static/index.html
@@ -42,9 +42,6 @@
                 </div>
               </div>
 
-
-
-
           <ul id="portal-siteactions">
             <li id="siteaction-sitemap">
               <a href="#" accesskey="3" title="Site Map">Site Map</a>
@@ -56,8 +53,6 @@
               <a href="#" accesskey="9" title="Contact">Contact</a>
             </li>
           </ul>
-
-
 
             <a id="portal-logo">
               <img src="images/theme_rain/logoRain.png" alt="" title="" height="73" width="200" />
@@ -417,5 +412,6 @@ Before you start exploring your newly created Plone site, please do the followin
         </div>
     </div>
    </div>
+   <script type="text/javascript"></script>
 </body>
 </html>
